Avoid zoom on safari input focus

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -42,7 +42,7 @@ code {
 .terminal__input {
   opacity: 0;
   width: 0px;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 input {
